--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.17.0",
+    "react-toastify": "^9.1.3",
     "swiper": "^11.0.1"
   },
   "devDependencies": {
